date time added

--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List </title>
+    <title>Antue's To Do List</title>
+    <link rel="icon" href="./list.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="time-show">
+        <img class="time-icon" src="./datetime.png" alt="">
+    <span id="time"></span>
+
+    </div>
     <main>
+       
      <div class="box">
         <input type="text" id="item" autofocus placeholder="Write Your Task Here...">
-        <ul id="to-do-box">
+        <ol id="to-do-box">
          
-        </ul>
+        </ol>
 
      </div>   
     </main>
