--- a/index.html
+++ b/index.html
@@ -14,16 +14,24 @@
     <span id="time"></span>
 
     </div>
-    <main>
-       
+    <div class="quote-container">
+            <div class="quote-box">
+                <p id="quote" class="quote">"Quote will show here..."</p>
+                <i id="btn" class="fa-solid fa-rotate-right"></i>
+                <small id="auther">Author</small>
+
+            </div>
+    </div>
+
+     <div class="box-container"> 
      <div class="box">
         <input type="text" id="item" autofocus placeholder="Write Your Task Here...">
         <ol id="to-do-box">
          
         </ol>
 
-     </div>   
-    </main>
+     </div>  
+    </div>  
 <script src="script.js"></script>
 <script src="https://kit.fontawesome.com/7b39a2ac99.js" crossorigin="anonymous"></script>
 </body>
