--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </div>
     <div class="quote-container">
             <div class="quote-box">
-                <p id="quote" class="quote">"Quote will show here..."</p>
+                <p id="quote" class="quote"></p>
                 <i id="btn" class="fa-solid fa-rotate-right"></i>
-                <small id="auther">Author</small>
+
 
             </div>
     </div>
