--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Antue's To Do List</title>
+    <title>My To Do List</title>
     <link rel="icon" href="./list.png">
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <div class="time-show">
@@ -15,12 +16,14 @@
 
     </div>
     <div class="quote-container">
-            <div class="quote-box">
-                <p id="quote" class="quote"></p>
-                <i id="btn" class="fa-solid fa-rotate-right"></i>
+        <h1>To get through the hardest journey, we need take only one step at a time, <br> but we must <span>keep on stepping.</span> </h1>
+        <div>
+                <img class="quote-1" src="./quote-1.png" alt="">
+        </div>
+        <div class="quote">
+                <img class="quote-2" src="./quote-2.png" alt="">
+        </div>
 
-
-            </div>
     </div>
 
      <div class="box-container"> 
@@ -34,5 +37,6 @@
     </div>  
 <script src="script.js"></script>
 <script src="https://kit.fontawesome.com/7b39a2ac99.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
