--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     </div>
     <div class="quote-container">
         <h1>To get through the hardest journey, we need take only one step at a time, <br> but we must <span>keep on stepping.</span> </h1>
-        <div>
+        <!-- <div>
                 <img class="quote-1" src="./quote-1.png" alt="">
         </div>
         <div class="quote">
                 <img class="quote-2" src="./quote-2.png" alt="">
-        </div>
+        </div> -->
 
     </div>
 
